--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -47,8 +47,50 @@ spring:
               uri: http://baeldung.com
               predicates:
                 - Path=/baeldung/
+            - id: response_header_route
+              uri: http://localhost:8080
+              predicates:
+                - Path=/response-header
+              filters:
+                - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+                - SetResponseHeader=My-Header-Set, Set
+                - RemoveResponseHeader=My-Header-Remove
+                - RewriteResponseHeader=My-Header-Rewrite, password=[^&]+, password=***
+                - RewriteLocationResponseHeader=AS_IN_REQUEST, Location
+                - RemoveJsonAttributesResponseBody=form,Accept,true
+                - AddResponseHeader=My-Header-Good,Good
+                - AddResponseHeader=My-Header-Set,Good
+                - AddResponseHeader=My-Header-Remove,Remove
+                - AddResponseHeader=My-Header-Rewrite,password=12345678
+            - id: path_route
+              uri: http://localhost:8080
+              predicates:
+                - Path=/new/local-test/**
+              filters:
+                - RewritePath=/new(?<segment>/?.*), ${segment}
+                - SetPath=/local-test
+            - id: redirect_route
+              uri: http://localhost:8080
+              predicates:
+                - Path=/status302/**
+              filters:
+                - RedirectTo=302, http://localhost:8080
+            - id: status_route
+              uri: http://localhost:8080
+              predicates:
+                - Path=/status401/**
+              filters:
+                - SetStatus=401
+            - id: size_route
+              uri: http://localhost:8080
+              predicates:
+                - Path=/request-size/**
+              filters:
+                - name: RequestSize
+                  args:
+                    maxSize: 5000000
 management:
   endpoints:
     web:
-        exposure:
-            include: "*"
+      exposure:
+        include: "*"
